--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ header img{
     width: 50px;
     height: 50px;
 }
+.edit-mode{
+  color: #ccc;
+}
 .container{
     max-width: 500px;
     margin-left: 30px auto;
